--- a/website/m/package.json
+++ b/website/m/package.json
@@ -6,16 +6,14 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.5.2",
-    "@nuxtjs/axios": "^5.3.3",
-    "axios": "^0.18.0",
+    "@nuxtjs/auth": "latest",
+    "@nuxtjs/axios": "latest",
+    "axios": "latest",
     "body-parser": "^1.18.3",
     "cookieparser": "^0.1.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
     "iview": "^3.1.3",
-    "node-sass": "^4.9.3",
-    "nuxt": "^1.4.2",
+    "node-sass": "latest",
+    "nuxt": "latest",
     "sass-loader": "^7.1.0",
     "save": "^2.3.2",
     "whatwg-fetch": "^3.0.0"
