--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -42,19 +42,20 @@ http {
 
         location /api {
         	proxy_pass  http://127.0.0.1:8000;
- 
+
         }
 
         location /api/chat/ws {
 	        proxy_pass http://127.0.0.1:8000;
 			proxy_http_version 1.1;
 		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "upgrade";
+		    proxy_set_header Connection "Upgrade";
+		    proxy_set_header Host  $http_host;
         }
 
         location / {
            proxy_pass  http://127.0.0.1:3000;
- 
+
         }
 
         #error_page  404              /404.html;
