--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -42,11 +42,14 @@ http {
 
         location /api {
         	proxy_pass  http://127.0.0.1:8000;
-
         }
 
+		 location /tpl {
+		        	proxy_pass  http://127.0.0.1:8000;
+		        }
+
         location /api/chat/ws {
-	        proxy_pass http://127.0.0.1:8000;
+	        proxy_pass http://127.0.0.1:8080;
 			proxy_http_version 1.1;
 		    proxy_set_header Upgrade $http_upgrade;
 		    proxy_set_header Connection "Upgrade";
