--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -42,11 +42,15 @@ http {
 
         location /api {
         	proxy_pass  http://127.0.0.1:8000;
+        	proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
 		 location /tpl {
-		        	proxy_pass  http://127.0.0.1:8000;
-		        }
+		     proxy_pass  http://127.0.0.1:8000;
+		     proxy_set_header X-Real-IP $remote_addr;
+             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		 }
 
         location /api/chat/ws {
 	        proxy_pass http://127.0.0.1:8080;
