--- a/website/m/package.json
+++ b/website/m/package.json
@@ -13,11 +13,12 @@
     "body-parser": "^1.18.3",
     "cookieparser": "^0.1.0",
     "iview": "^3.1.3",
+    "mint-ui": "latest",
     "node-sass": "latest",
     "nuxt": "latest",
     "sass-loader": "^7.1.0",
     "save": "^2.3.2",
-    "vant": "^1.4.7",
+    "vant": "latest",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
@@ -26,7 +27,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "postcss-pxtorem": "^4.0.1",
-    "style-loader": "^0.23.0",
-    "stylus-loader": "^3.0.2"
+    "style-loader": "latest",
+    "stylus-loader": "latest"
   }
 }
