--- a/website/m/package.json
+++ b/website/m/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.18.3",
     "cookieparser": "^0.1.0",
     "iview": "^3.1.3",
-    "mint-ui": "latest",
+    "mint-ui": "^2.2.13",
     "node-sass": "latest",
     "nuxt": "latest",
     "sass-loader": "^7.1.0",
@@ -27,7 +27,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "postcss-pxtorem": "^4.0.1",
-    "style-loader": "latest",
-    "stylus-loader": "latest"
+    "style-loader": "^0.23.1",
+    "stylus-loader": "^3.0.2"
   }
 }
