--- a/website/m/package.json
+++ b/website/m/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.18.3",
     "cookieparser": "^0.1.0",
     "iview": "^3.1.3",
-    "mint-ui": "^2.2.13",
+    "mint-ui": "latest",
     "node-sass": "latest",
     "nuxt": "latest",
     "sass-loader": "^7.1.0",
