--- a/website/m/package.json
+++ b/website/m/package.json
@@ -12,20 +12,24 @@
     "axios": "latest",
     "body-parser": "^1.18.3",
     "cookieparser": "^0.1.0",
+    "css-loader": "^1.0.1",
     "iview": "^3.1.3",
     "mint-ui": "latest",
     "node-sass": "latest",
     "nuxt": "latest",
     "sass-loader": "^7.1.0",
     "save": "^2.3.2",
+    "style-loader": "^0.23.1",
     "vant": "latest",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
+    "eslint": "^5.9.0",
+    "eslint-loader": "^2.1.1",
     "postcss-pxtorem": "^4.0.1"
   }
 }
