--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -41,16 +41,28 @@ http {
         #access_log  logs/host.access.log  main;
 
         location /api {
-        	proxy_pass  http://127.0.0.1:8000;
-        	proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        		proxy_pass  http://127.0.0.1:8000;
+        		proxy_set_header X-Real-IP $remote_addr;
         }
 
-		 location /tpl {
-		     proxy_pass  http://127.0.0.1:8000;
-		     proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		 }
+        location /static/ {
+        		root  F:/demo/ghoper/;
+        }
+
+        location /tpl {
+        	proxy_pass  http://127.0.0.1:8000;
+        	proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /gin {
+        	proxy_pass  http://127.0.0.1:8080;
+        	proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /iris {
+        	proxy_pass  http://127.0.0.1:8888;
+        	proxy_set_header X-Real-IP $remote_addr;
+        }
 
         location /api/chat/ws {
 	        proxy_pass http://127.0.0.1:8080;
