--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,6 @@
 [server]
 #debug or release
-RunMode = release
-Env = development
+Env = release
 HttpPort = :8000
 ReadTimeout = 60
 WriteTimeout = 60
