--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -40,36 +40,32 @@ http {
 
         #access_log  logs/host.access.log  main;
 
-        location /api {
-        		proxy_pass  http://127.0.0.1:8000;
-        		proxy_set_header X-Real-IP $remote_addr;
-        }
+         location /api {
+        		        	proxy_pass  http://127.0.0.1:8000;
+        		        	proxy_set_header X-Real-IP $remote_addr;
+                }
 
         location /static/ {
-        		root  F:/demo/ghoper/;
-        }
+                     root  F:/demo/ghoper/;
+                }
 
         location /tpl {
-        	proxy_pass  http://127.0.0.1:8000;
-        	proxy_set_header X-Real-IP $remote_addr;
-        }
+                    proxy_pass  http://127.0.0.1:8000;
+                    proxy_set_header X-Real-IP $remote_addr;
+                }
 
-        location /gin {
-        	proxy_pass  http://127.0.0.1:8080;
-        	proxy_set_header X-Real-IP $remote_addr;
-        }
+        #location /gin {
+        #        	proxy_pass  http://127.0.0.1:8080;
+        #        	proxy_set_header X-Real-IP $remote_addr;
+        #        }
 
-        location /iris {
-        	proxy_pass  http://127.0.0.1:8888;
-        	proxy_set_header X-Real-IP $remote_addr;
-        }
 
         location /api/chat/ws {
-	        proxy_pass http://127.0.0.1:8080;
-			proxy_http_version 1.1;
-		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "Upgrade";
-		    proxy_set_header Host  $http_host;
+            proxy_pass http://127.0.0.1:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host  $http_host;
         }
 
         location / {
