--- a/website/pc/package.json
+++ b/website/pc/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "next": "^8.0.0",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "vditor": "^0.1.8"
   }
 }
