--- a/website/antd/package.json
+++ b/website/antd/package.json
@@ -24,6 +24,7 @@
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
     "nuxt": "^2.4.0",
+    "vditor": "^0.2.5",
     "vuetify": "^1.5.1",
     "vuetify-loader": "^1.2.1"
   },
@@ -33,6 +34,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
+    "babel-plugin-import": "^1.11.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": ">=12.0.0",
