--- a/website/antd/package.json
+++ b/website/antd/package.json
@@ -23,6 +23,7 @@
     "element-ui": "^2.5.4",
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
+    "mavon-editor": "^2.6.17",
     "nuxt": "^2.4.0",
     "vditor": "^0.2.5",
     "vuetify": "^1.5.1",
