--- a/website/antd/package.json
+++ b/website/antd/package.json
@@ -5,6 +5,7 @@
   "author": "贾一饼",
   "private": true,
   "scripts": {
+    "n": "nuxt",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
@@ -19,6 +20,7 @@
     "@nuxtjs/pwa": "^2.6.0",
     "ant-design-vue": "^1.1.10",
     "apollo-link-http": "^1.5.11",
+    "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.5.4",
     "graphql-tag": "^2.10.1",
