--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -40,27 +40,35 @@ http {
 
         #access_log  logs/host.access.log  main;
 
-         location /api {
-        		        	proxy_pass  http://127.0.0.1:8000;
-        		        	proxy_set_header X-Real-IP $remote_addr;
-                }
+        location /api {
+          proxy_pass  http://127.0.0.1:8000;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /tpl {
+          proxy_pass  http://127.0.0.1:8000;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /gin {
+          proxy_pass  http://127.0.0.1:8000;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
 
         location /static/ {
                      root  F:/demo/ghoper/;
                 }
 
-        location /tpl {
-                    proxy_pass  http://127.0.0.1:8000;
-                    proxy_set_header X-Real-IP $remote_addr;
-                }
-
+        location /assets/ {
+          root  F:/demo/ghoper/website/antd/;
+        }
         #location /gin {
         #        	proxy_pass  http://127.0.0.1:8080;
         #        	proxy_set_header X-Real-IP $remote_addr;
         #        }
 
 
-        location /api/chat/ws {
+        location /ws {
             proxy_pass http://127.0.0.1:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
