--- a/config/config.ini
+++ b/config/config.ini
@@ -33,7 +33,7 @@ Host =  hoper.xyz
 MailHost = smtp.qq.com
 MailPort = 465
 MailUser =  lby.i@qq.com
-MailPassWord = zjokwzwojyfvbgef
+MailPassword = zjokwzwojyfvbgef
 MailFrom =  hoper.xyz
 
 LuosimaoVerifyURL =
