--- a/website/antd/package.json
+++ b/website/antd/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/apollo": "^4.0.0-rc4",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "@tinymce/tinymce-vue": "^2.0.0",
     "ant-design-vue": "^1.1.10",
     "apollo-link-http": "^1.5.11",
     "cookieparser": "^0.1.0",
@@ -28,6 +29,7 @@
     "mavon-editor": "^2.6.17",
     "medium-editor": "^5.23.3",
     "nuxt": "^2.4.0",
+    "tinymce": "^5.0.1",
     "vditor": "^0.2.5",
     "vuetify": "^1.5.1",
     "vuetify-loader": "^1.2.1",
