--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/apollo": "^4.0.0-rc4",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/markdownit": "^1.2.3",
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^2.6.0",
     "@tinymce/tinymce-vue": "^2.0.0",
     "ant-design-vue": "^1.1.10",
@@ -28,7 +29,8 @@
     "koa": "^2.6.2",
     "mavon-editor": "^2.6.17",
     "nuxt": "^2.4.0",
-    "tinymce": "^5.0.1"
+    "tinymce": "^5.0.1",
+    "vditor": "^0.2.5"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
