--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -29,8 +29,7 @@
     "koa": "^2.6.2",
     "mavon-editor": "^2.6.17",
     "nuxt": "^2.4.0",
-    "tinymce": "^5.0.1",
-    "vditor": "^0.2.5"
+    "tinymce": "^5.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
@@ -51,6 +50,8 @@
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^23.6.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "nodemon": "^1.18.9",
     "prettier": "1.14.3",
     "vue-jest": "^3.0.2"
