--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -80,7 +80,7 @@ http {
 
         location / {
            proxy_pass  http://127.0.0.1:3000;
-
+           proxy_set_header X-Real-IP $remote_addr;
         }
 
         #error_page  404              /404.html;
