--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -25,6 +25,7 @@
     "apollo-link-http": "^1.5.11",
     "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
+    "dayjs": "^1.8.9",
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
     "mavon-editor": "^2.6.17",
