--- a/config/iris.yml
+++ b/config/iris.yml
@@ -7,3 +7,4 @@ DisableBodyConsumptionOnUnmarshal: false
 DisableAutoFireStatusCode: false
 TimeFormat: Mon, 01 Jan 2006 15:04:05 GMT
 Charset: UTF-8
+EnableOptimizations: true
