--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -49,26 +49,34 @@ http {
 
         location /tpl {
           proxy_pass  http://127.0.0.1:8000;
-            proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /gin {
           proxy_pass  http://127.0.0.1:8000;
-            proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        location /lua {
+          proxy_pass  http://127.0.0.1:8000;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /other {
+          proxy_pass  http://127.0.0.1:8000;
+            proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
         location /static/ {
-                     root  F:/demo/ghoper/;
-                }
+          root  F:/demo/ghoper/;
+         }
 
         location /assets/ {
           root  F:/demo/ghoper/website/vhoper/;
         }
-        #location /gin {
-        #        	proxy_pass  http://127.0.0.1:8080;
-        #        	proxy_set_header X-Real-IP $remote_addr;
-        #        }
-
 
         location /ws {
             proxy_pass http://127.0.0.1:8000;
