--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -32,6 +32,7 @@
     "mavon-editor": "^2.6.17",
     "nuxt": "^2.4.0",
     "nuxt-ts": "^2.4.5",
+    "spark-md5": "^3.0.0",
     "tinymce": "^5.0.1",
     "vue-property-decorator": "^8.0.0"
   },
