--- a/test/java/pom.xml
+++ b/test/java/pom.xml
@@ -27,6 +27,9 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>12</release>
+                    <compilerArgs>
+                        <arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
