--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -61,6 +61,7 @@
     "less-loader": "^4.1.0",
     "nodemon": "^1.18.9",
     "prettier": "1.14.3",
+    "tslint-config-standard": "^8.0.1",
     "vue-jest": "^3.0.2"
   }
 }
