配置入数据库

--- a/config/iris.yml
+++ b/config/iris.yml
@@ -1,4 +1,4 @@
-DisableStartupLog: false
+DisableStartupLog: true
 DisableInterruptHandler: false
 DisablePathCorrection: false
 EnablePathEscape: false
