--- a/mobile/kotlin/app/build.gradle
+++ b/mobile/kotlin/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName '1.0'
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'android.support.hoper.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -30,7 +30,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.hoper:runner:1.0.2'
 }
 
 kotlin {
@@ -48,8 +48,8 @@ kotlin {
         }
         commonTest {
             dependencies {
-        		implementation kotlin('test-common')
-        		implementation kotlin('test-annotations-common')
+        		implementation kotlin('hoper-common')
+        		implementation kotlin('hoper-annotations-common')
             }
         }
         androidMain {
@@ -59,8 +59,8 @@ kotlin {
         }
         androidTest {
             dependencies {
-                implementation kotlin('test')
-                implementation kotlin('test-junit')
+                implementation kotlin('hoper')
+                implementation kotlin('hoper-junit')
             }
         }
         iosMain {
