--- a/website/vhoper/.gitignore
+++ b/website/vhoper/.gitignore
@@ -19,7 +19,7 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# nyc test coverage
+# nyc hoper coverage
 .nyc_output
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
