--- a/zther/jhoper/jhoper-user/jhoper-user-web/pom.xml
+++ b/zther/jhoper/jhoper-user/jhoper-user-web/pom.xml
@@ -7,12 +7,13 @@
 
     <parent>
         <groupId>xyz.hoper</groupId>
-        <artifactId>jhoper</artifactId>
+        <artifactId>jhoper-user</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-
-    <artifactId>jhoper-web</artifactId>
+    <groupId>xyz.hoper</groupId>
+    <artifactId>jhoper-user-web</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.12</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,7 +58,7 @@
         </dependency>-->
         <dependency>
             <groupId>xyz.hoper</groupId>
-            <artifactId>jhoper-api</artifactId>
+            <artifactId>jhoper-user-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -68,6 +69,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
         </dependency>
     </dependencies>
 
