--- a/config/config.ini
+++ b/config/config.ini
@@ -13,7 +13,7 @@ JwtSecret = 233
 
 RuntimeRootPath =
 #文件
-ImagePrefixUrl = http://localhost:8000
+ImagePrefixUrl = https://localhost:8000
 UploadImgDir = ../static/upload/images/
 ImagePath = ../static/upload/images/
 ImgHost =
