--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -32,73 +32,28 @@ http {
 
     #gzip  on;
 
-    server {
-        listen       80;
-        server_name  hoper.xyz;
+    #server {
+        #listen       80;
+        #server_name  hoper.xyz;
 
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
-        location /api {
-          proxy_pass  http://127.0.0.1:8000;
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+        #location / {
+        #    proxy_pass  https://127.0.0.1:3000;
+ 		#	proxy_set_header X-Real-IP $remote_addr;
+        #}
 
-        location /tpl {
-          proxy_pass  http://127.0.0.1:8000;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /gin {
-          proxy_pass  http://127.0.0.1:8000;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /lua {
-          proxy_pass  http://127.0.0.1:8000;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /other {
-          proxy_pass  http://127.0.0.1:8000;
-            proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-        location /static/ {
-          root  F:/demo/ghoper/;
-         }
-
-        location /assets/ {
-          root  F:/demo/ghoper/website/vhoper/;
-        }
-
-        location /ws {
-            proxy_pass http://127.0.0.1:8000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host  $http_host;
-        }
-
-        location / {
-           proxy_pass  http://127.0.0.1:3000;
-           proxy_set_header X-Real-IP $remote_addr;
-        }
 
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+        #error_page   500 502 503 504  /50x.html;
+        #location = /50x.html {
+        #    root   html;
+        #}
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
@@ -122,7 +77,7 @@ http {
         #location ~ /\.ht {
         #    deny  all;
         #}
-    }
+    #}
 
 
     # another virtual host using mix of IP-, name-, and port-based configuration
@@ -141,23 +96,50 @@ http {
 
     # HTTPS server
     #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+    server {
+        listen       443 ssl;
+        server_name  hoper.xyz;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+        ssl_certificate      F:/demo/ghoper/config/tls/cert.pem;
+        ssl_certificate_key  F:/demo/ghoper/config/tls/cert.key;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+        ssl_ciphers  HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers  on;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+        location /api {
+		    proxy_pass  https://127.0.0.1:8000;
+		    proxy_set_header X-Real-IP $remote_addr;
+        }
+
+     	location /tpl {
+		    proxy_pass  https://127.0.0.1:8000;
+		    proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /other {
+		    proxy_pass  https://127.0.0.1:8000;
+		    proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /static/ {
+		    root  F:/demo/ghoper/;
+		}
+
+        location /ws {
+	        proxy_pass https://127.0.0.1:8000;
+			proxy_http_version 1.1;
+		    proxy_set_header Upgrade $http_upgrade;
+		    proxy_set_header Connection "Upgrade";
+		    proxy_set_header Host  $http_host;
+        }
+
+        location / {
+            proxy_pass  https://127.0.0.1:3000;
+ 			proxy_set_header X-Real-IP $remote_addr;
+        }
+    }
 
 }
