--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -30,54 +30,55 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
+
     #gzip  on;
 
-    #server {
-        #listen       80;
-        #server_name  hoper.xyz;
+    server {
+        listen       80;
+        server_name  hoper.xyz;
+        rewrite ^(.*) https://$host/$1 permanent;
+        # charset koi8-r;
 
-        #charset koi8-r;
+        # access_log  logs/host.access.log  main;
 
-        #access_log  logs/host.access.log  main;
-
-        #location / {
+        # location / {
         #    proxy_pass  https://127.0.0.1:3000;
- 		#	proxy_set_header X-Real-IP $remote_addr;
-        #}
+ 		# 	proxy_set_header X-Real-IP $remote_addr;
+        # }
 
 
-        #error_page  404              /404.html;
+        # error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
-        #
-        #error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
+        
+        # error_page   500 502 503 504  /50x.html;
+        # location = /50x.html {
         #    root   html;
-        #}
+        # }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
+        
+        # location ~ \.php$ {
         #    proxy_pass   http://127.0.0.1;
-        #}
+        # }
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
+        
+        # location ~ \.php$ {
         #    root           html;
         #    fastcgi_pass   127.0.0.1:9000;
         #    fastcgi_index  index.php;
         #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
         #    include        fastcgi_params;
-        #}
+        # }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
-        #
-        #location ~ /\.ht {
+        
+        # location ~ /\.ht {
         #    deny  all;
-        #}
-    #}
+        # }
+    }
 
 
     # another virtual host using mix of IP-, name-, and port-based configuration
@@ -93,6 +94,28 @@ http {
     #    }
     #}
 
+
+    #upstream backend{
+    #    server 0.0.0.0;
+    #    balancer_by_lua_block {
+    #        local balancer = require "ngx.balancer"
+    #        local host = {"192.168.1.111", "192.168.1.112"}
+    #        local backend = ""
+    #        local port = ngx.var.server_port
+    #        local remote_ip = ngx.var.remote_addr
+    #        local key = remote_ip..port
+    #        local hash = ngx.crc32_long(key);
+    #        hash = (hash % 2) + 1
+    #        backend = host[hash]
+    #        ngx.log(ngx.DEBUG, "ip_hash=", ngx.var.remote_addr, " hash=", hash, " up=", backend, ":", port)
+    #        local ok, err = balancer.set_current_peer(backend, port)
+    #        if not ok then
+    #            ngx.log(ngx.ERR, "failed to set the current peer: ", err)
+    #            return ngx.exit(500)
+    #        end
+    #        ngx.log(ngx.DEBUG, "current peer ", backend, ":", port)
+    #    }
+    #}
 
     # HTTPS server
     #
@@ -119,13 +142,26 @@ http {
 		    proxy_set_header X-Real-IP $remote_addr;
         }
 
+        location /lua {
+		    set $test "hello, world.";
+            content_by_lua '
+                ngx.header.content_type = "text/plain";
+                ngx.say(ngx.var.test);
+            ';
+        }
+
+        location /iplog {
+            default_type 'text/html'; 
+            content_by_lua_file F:/demo/ghoper/zther/lhoper/log.lua;
+        }
+        
         location /other {
 		    proxy_pass  https://127.0.0.1:8000;
 		    proxy_set_header X-Real-IP $remote_addr;
         }
 
         location /static/ {
-		    root  F:/demo/ghoper/;
+		    root  F:/demo/ghoper/; 
 		}
 
         location /ws {
