--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -43,7 +43,7 @@ http {
 
         # location / {
         #    proxy_pass  https://127.0.0.1:3000;
- 		# 	proxy_set_header X-Real-IP $remote_addr;
+        #   proxy_set_header X-Real-IP $remote_addr;
         # }
 
 
@@ -133,48 +133,36 @@ http {
         ssl_prefer_server_ciphers  on;
 
         location /api {
-		    proxy_pass  https://127.0.0.1:8000;
-		    proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass  https://127.0.0.1:8000;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-PORT $remote_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-     	location /tpl {
-		    proxy_pass  https://127.0.0.1:8000;
-		    proxy_set_header X-Real-IP $remote_addr;
+
+        location /ws {
+            proxy_pass https://127.0.0.1:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host  $http_host;
         }
 
         location /lua {
-		    set $test "hello, world.";
-            content_by_lua '
-                ngx.header.content_type = "text/plain";
-                ngx.say(ngx.var.test);
-            ';
-        }
-
-        location /iplog {
-            default_type 'text/html'; 
-            content_by_lua_file F:/demo/ghoper/zther/lhoper/log.lua;
-        }
-        
-        location /other {
-		    proxy_pass  https://127.0.0.1:8000;
-		    proxy_set_header X-Real-IP $remote_addr;
+            default_type 'text/html';
+            lua_code_cache off;
+            content_by_lua_file F:/demo/ghoper/zther/lhoper/router.lua;
         }
 
         location /static/ {
-		    root  F:/demo/ghoper/; 
-		}
-
-        location /ws {
-	        proxy_pass https://127.0.0.1:8000;
-			proxy_http_version 1.1;
-		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "Upgrade";
-		    proxy_set_header Host  $http_host;
+            root  F:/demo/ghoper/; 
         }
 
         location / {
             proxy_pass  https://127.0.0.1:3000;
- 			proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-PORT $remote_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 
