--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -36,14 +36,13 @@ http {
     server {
         listen       80;
         server_name  hoper.xyz;
-        rewrite ^(.*) https://$host/$1 permanent;
+        rewrite ^(.*) https://$host$request_uri permanent;
         # charset koi8-r;
 
         # access_log  logs/host.access.log  main;
 
         # location / {
         #    proxy_pass  https://127.0.0.1:3000;
-        #   proxy_set_header X-Real-IP $remote_addr;
         # }
 
 
@@ -133,35 +132,35 @@ http {
         ssl_prefer_server_ciphers  on;
 
         location /api {
-            proxy_pass  https://127.0.0.1:8000;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Real-PORT $remote_port;
+		    proxy_pass  https://127.0.0.1:8000;
+		    proxy_set_header X-Real-IP $remote_addr;
+		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
 
         location /ws {
-            proxy_pass https://127.0.0.1:8000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host  $http_host;
+	        proxy_pass https://127.0.0.1:8000;
+			proxy_http_version 1.1;
+		    proxy_set_header Upgrade $http_upgrade;
+		    proxy_set_header Connection "Upgrade";
+		    proxy_set_header Host  $http_host;
         }
 
-        location /lua {
-            default_type 'text/html';
+        location ~^/lua/([-_a-zA-Z0-9/]+) {
+		    default_type 'text/html';
             lua_code_cache off;
-            content_by_lua_file F:/demo/ghoper/zther/lhoper/router.lua;
+            content_by_lua_file F:/demo/ghoper/zther/lhoper/$1.lua;
         }
 
         location /static/ {
-            root  F:/demo/ghoper/; 
-        }
+		    root  F:/demo/ghoper/; 
+		}
 
         location / {
             proxy_pass  https://127.0.0.1:3000;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Real-PORT $remote_port;
+ 			proxy_set_header X-Real-IP $remote_addr;
+		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
