--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -30,8 +30,11 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-
     #gzip  on;
+
+    lua_package_path "F:/demo/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块 
+	lua_package_cpath "F:/demo/ghoper/zther/lhoper/clib/?.so;;"; #c模块 
+	init_by_lua_file F:/demo/ghoper/zther/lhoper/init.lua;
 
     server {
         listen       80;
@@ -137,7 +140,6 @@ http {
 		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-
 
         location /ws {
 	        proxy_pass https://127.0.0.1:8000;
