--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -152,7 +152,12 @@ http {
         location ~^/lua/([-_a-zA-Z0-9/]+) {
 		    default_type 'text/html';
             lua_code_cache off;
-            content_by_lua_file F:/demo/ghoper/zther/lhoper/$1.lua;
+            set $lua_path $1;
+            set $test '';
+            access_by_lua '
+                route:route_verify()
+            ';
+            content_by_lua_file F:/demo/ghoper/zther/lhoper/$lua_path.lua;
         }
 
         location /static/ {
