关掉缓存每次请求都会执行init

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -32,9 +32,9 @@ http {
 
     #gzip  on;
 
-    lua_package_path "F:/demo/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块 
-	lua_package_cpath "F:/demo/ghoper/zther/lhoper/clib/?.so;;"; #c模块 
-	init_by_lua_file F:/demo/ghoper/zther/lhoper/init.lua;
+    lua_package_path "E:/code/home/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块 
+	lua_package_cpath "E:/code/home/ghoper/zther/lhoper/clib/?.so;;"; #c模块 
+	init_by_lua_file E:/code/home/ghoper/zther/lhoper/init.lua;
 
     server {
         listen       80;
@@ -125,8 +125,8 @@ http {
         listen       443 ssl;
         server_name  hoper.xyz;
 
-        ssl_certificate      F:/demo/ghoper/config/tls/cert.pem;
-        ssl_certificate_key  F:/demo/ghoper/config/tls/cert.key;
+        ssl_certificate      E:/code/home/ghoper/config/tls/cert.pem;
+        ssl_certificate_key  E:/code/home/ghoper/config/tls/cert.key;
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
@@ -151,17 +151,16 @@ http {
 
         location ~^/lua/([-_a-zA-Z0-9/]+) {
 		    default_type 'text/html';
-            lua_code_cache off;
+            #lua_code_cache off;
             set $lua_path $1;
-            set $test '';
             access_by_lua '
                 route:route_verify()
             ';
-            content_by_lua_file F:/demo/ghoper/zther/lhoper/$lua_path.lua;
+            content_by_lua_file E:/code/home/ghoper/zther/lhoper/$lua_path.lua;
         }
 
         location /static/ {
-		    root  F:/demo/ghoper/; 
+		    root  E:/code/home/ghoper/; 
 		}
 
         location / {
