openresty模块热加载

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -32,9 +32,11 @@ http {
 
     #gzip  on;
 
-    lua_package_path "E:/code/home/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块 
-	lua_package_cpath "E:/code/home/ghoper/zther/lhoper/clib/?.so;;"; #c模块 
-	init_by_lua_file E:/code/home/ghoper/zther/lhoper/init.lua;
+    lua_package_path "F:/demo/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块 
+	lua_package_cpath "F:/demo/ghoper/zther/lhoper/clib/?.so;;"; #c模块 
+	init_by_lua_file F:/demo/ghoper/zther/lhoper/init/init.lua;
+
+    fastcgi_intercept_errors on;
 
     server {
         listen       80;
@@ -125,14 +127,16 @@ http {
         listen       443 ssl;
         server_name  hoper.xyz;
 
-        ssl_certificate      E:/code/home/ghoper/config/tls/cert.pem;
-        ssl_certificate_key  E:/code/home/ghoper/config/tls/cert.key;
+        ssl_certificate      F:/demo/ghoper/config/tls/cert.pem;
+        ssl_certificate_key  F:/demo/ghoper/config/tls/cert.key;
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
 
         ssl_ciphers  HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers  on;
+
+        error_page  404 403 500 502 503 504  /error;
 
         location /api {
 		    proxy_pass  https://127.0.0.1:8000;
@@ -150,17 +154,17 @@ http {
         }
 
         location ~^/lua/([-_a-zA-Z0-9/]+) {
+            error_page  404 403 500 502 503 504  error;
 		    default_type 'text/html';
-            #lua_code_cache off;
+            lua_code_cache off;
             set $lua_path $1;
-            access_by_lua '
-                route:route_verify()
-            ';
-            content_by_lua_file E:/code/home/ghoper/zther/lhoper/$lua_path.lua;
+            set $module '';
+            access_by_lua_file F:/demo/ghoper/zther/lhoper/access/access.lua;
+            content_by_lua_file F:/demo/ghoper/zther/lhoper/$lua_path.lua;
         }
 
         location /static/ {
-		    root  E:/code/home/ghoper/; 
+		    root  F:/demo/ghoper/; 
 		}
 
         location / {
