--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -32,8 +32,8 @@ http {
 
     #gzip  on;
 
-    lua_package_path "F:/demo/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块 
-	lua_package_cpath "F:/demo/ghoper/zther/lhoper/clib/?.so;;"; #c模块 
+    lua_package_path "F:/demo/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块
+	lua_package_cpath "F:/demo/ghoper/zther/lhoper/clib/?.so;;"; #c模块
 	init_by_lua_file F:/demo/ghoper/zther/lhoper/init/init.lua;
 
     fastcgi_intercept_errors on;
@@ -54,20 +54,20 @@ http {
         # error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
-        
+
         # error_page   500 502 503 504  /50x.html;
         # location = /50x.html {
         #    root   html;
         # }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        
+
         # location ~ \.php$ {
         #    proxy_pass   http://127.0.0.1;
         # }
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        
+
         # location ~ \.php$ {
         #    root           html;
         #    fastcgi_pass   127.0.0.1:9000;
@@ -78,7 +78,7 @@ http {
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
-        
+
         # location ~ /\.ht {
         #    deny  all;
         # }
@@ -138,6 +138,12 @@ http {
 
         error_page  404 403 500 502 503 504  /error;
 
+        location = /favicon.ico {
+            log_not_found off;
+            access_log off;
+            root  F:/demo/ghoper/static/;
+        }
+
         location /api {
 		    proxy_pass  https://127.0.0.1:8000;
 		    proxy_set_header X-Real-IP $remote_addr;
@@ -164,7 +170,7 @@ http {
         }
 
         location /static/ {
-		    root  F:/demo/ghoper/; 
+		    root  F:/demo/ghoper/;
 		}
 
         location / {
