--- a/zther/jhoper/jhoper-user/jhoper-user-api/pom.xml
+++ b/zther/jhoper/jhoper-user/jhoper-user-api/pom.xml
@@ -23,5 +23,12 @@
         </dependency>
     </dependencies>
 
-
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Internal repo</name>
+            <password>123456</password>
+            <url>file:///home/thara/testesb/in</url>
+        </repository>
+    </distributionManagement>
 </project>
