--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -29,6 +29,7 @@
     "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
     "mavon-editor": "^2.6.17",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.6.1",
     "nuxt-ts": "^2.4.5",
     "push.js": "^1.0.9",
