--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -124,7 +124,8 @@ http {
     # HTTPS server
     #
     server {
-        listen       443 ssl;
+        #开启http2只需要nginx开启
+        listen       443 ssl http2;
         server_name  hoper.xyz;
 
         ssl_certificate      F:/demo/ghoper/config/tls/cert.pem;
@@ -145,14 +146,14 @@ http {
         }
 
         location /api {
-		    proxy_pass  https://127.0.0.1:8000;
+		    proxy_pass  http://127.0.0.1:8000;
 		    proxy_set_header X-Real-IP $remote_addr;
 		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /ws {
-	        proxy_pass https://127.0.0.1:8000;
+	        proxy_pass http://127.0.0.1:8000;
 			proxy_http_version 1.1;
 		    proxy_set_header Upgrade $http_upgrade;
 		    proxy_set_header Connection "Upgrade";
@@ -162,7 +163,7 @@ http {
         location ~^/lua/([-_a-zA-Z0-9/]+) {
             error_page  404 403 500 502 503 504  error;
 		    default_type 'text/html';
-            lua_code_cache off;
+            #lua_code_cache off;
             set $lua_path $1;
             set $module '';
             access_by_lua_file F:/demo/ghoper/zther/lhoper/access/access.lua;
@@ -174,7 +175,7 @@ http {
 		}
 
         location / {
-            proxy_pass  https://127.0.0.1:3000;
+            proxy_pass  http://127.0.0.1:3000;
  			proxy_set_header X-Real-IP $remote_addr;
 		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
