--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -36,7 +36,9 @@
     "spark-md5": "^3.0.0",
     "tinymce": "^5.0.1",
     "vditor": "^1.2.1",
-    "vue-property-decorator": "^8.0.0"
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-property-decorator": "^8.0.0",
+    "vue-virtual-scroller": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
