--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -23,7 +23,6 @@
     "@nuxtjs/pwa": "^2.6.0",
     "ant-design-vue": "^1.1.10",
     "apollo-link-http": "^1.5.11",
-    "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.9",
     "graphql-tag": "^2.10.1",
@@ -33,10 +32,11 @@
     "nuxt": "^2.6.1",
     "nuxt-ts": "^2.4.5",
     "push.js": "^1.0.9",
+    "scrollmagic": "^2.0.6",
+    "scrollreveal": "^4.0.5",
     "spark-md5": "^3.0.0",
     "tinymce": "^5.0.1",
     "vditor": "^1.2.1",
-    "vue-infinite-scroll": "^2.0.2",
     "vue-property-decorator": "^8.0.0",
     "vue-virtual-scroller": "^1.0.0-rc.2"
   },
