--- a/test/clion/rust/Cargo.toml
+++ b/test/clion/rust/Cargo.toml
@@ -1,7 +1,11 @@
-[package]
-name = "rust"
-version = "0.1.0"
-authors = ["贾一饼 <lby.i@qq.com>"]
-edition = "2018"
+[profile.dev]
+opt-level = 0
 
-[dependencies]
+[profile.release]
+opt-level = 3
+
+[workspace]
+members = [
+    "hoper",
+    "cmd",
+]
