--- a/zther/rhoper/Cargo.toml
+++ b/zther/rhoper/Cargo.toml
@@ -5,17 +5,21 @@ authors = ["贾一饼 <lby.i@qq.com>"]
 edition = "2018"
 
 [dependencies]
-hoper = { path = "./hoper" }
-#rand = "0.6.0-pre.1"
-#actix-web = { git = "https://github.com/actix/actix-web" }
-mio = "0.6.16"
-crossbeam-channel = "0.3.2"
-failure = "0.1.3"
-slab = "0.4.1"
-log = "0.4"
+actix-web = { git = "https://github.com/actix/actix-web" }
+actix = { version = "0.8.1", features = ["http"] }
+actix-rt = "0.2.2"
+actix-files = "0.1.0-beta.1"
+bcrypt = "0.2.1"
+chrono = { version = "0.4.6", features = ["serde"] }
+diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
+dotenv = "0.13.0"
+derive_more = "0.14"
 env_logger = "0.6.0"
-
-[workspace]
-members = [
-    "hoper",
-]
+jsonwebtoken = "6.0.0"
+futures = "0.1.25"
+r2d2 = "0.8.3"
+serde_derive="1.0.80"
+serde_json="1.0"
+serde="1.0"
+sparkpost = "0.5.2"
+uuid = { version = "0.6.5", features = ["serde", "v4"] }
