--- a/test/kotlin/native/build.gradle
+++ b/test/kotlin/native/build.gradle
@@ -1,21 +1,20 @@
 plugins {
-    id 'kotlin-multiplatform' version '1.3.11'
+    id 'kotlin-multiplatform' version '1.3.21'
 }
 repositories {
     mavenCentral()
 }
 kotlin {
-    targets {
-        // For ARM, preset should be changed to presets.iosArm32 or presets.iosArm64
-        // For Linux, preset should be changed to e.g. presets.linuxX64
-        // For MacOS, preset should be changed to e.g. presets.macosX64
-        fromPreset(presets.mingwX64, 'mingw')
-
-        configure([mingw]) {
+    // For ARM, should be changed to iosArm32 or iosArm64
+    // For Linux, should be changed to e.g. linuxX64
+    // For MacOS, should be changed to e.g. macosX64
+    // For Windows, should be changed to e.g. mingwX64
+    mingwX64("mingw") {
+        compilations.main {
             // Comment to generate Kotlin/Native library (KLIB) instead of executable file:
-            compilations.main.outputKinds('EXECUTABLE')
+            outputKinds("executable")
             // Change to specify fully qualified name of your application's entry point:
-            compilations.main.entryPoint = 'sample.main'
+            entryPoint 'sample.main'
         }
     }
     sourceSets {
@@ -29,8 +28,8 @@ kotlin {
 }
 
 task runProgram {
-    def buildType = 'release' // Change to 'debug' to run application with debug symbols.
-    dependsOn "link${buildType.capitalize()}ExecutableMingw"
+    def buildType = 'RELEASE' // Change to 'DEBUG' to run application with debug symbols.
+    dependsOn kotlin.targets.mingw.compilations.main.linkTaskName('EXECUTABLE', buildType)
     doLast {
         def programFile = kotlin.targets.mingw.compilations.main.getBinary('EXECUTABLE', buildType)
         exec {
