--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-micro/mian/mian
+
 # Runtime data
 pids
 *.pid
@@ -95,3 +95,5 @@ upload
 
 nginx-*
 /zther/rhoper/Cargo.lock
+/website/vhoper/yarn.lock
+/micro/main/main
