--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -20,7 +20,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/markdownit": "^1.2.3",
     "@nuxtjs/proxy": "^1.3.3",
-    "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.14",
     "ant-design-vue": "^1.1.10",
     "apollo-link-http": "^1.5.11",
     "cross-env": "^5.2.0",
@@ -30,7 +30,6 @@
     "mavon-editor": "^2.6.17",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.6.1",
-    "nuxt-ts": "^2.4.5",
     "push.js": "^1.0.9",
     "scrollmagic": "^2.0.6",
     "scrollreveal": "^4.0.5",
@@ -45,25 +44,25 @@
     "@nuxtjs/eslint-config": "^0.0.1",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^23.6.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
     "babel-plugin-import": "^1.11.0",
     "eslint": "^5.0.1",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-config-standard": ">=12.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": ">=2.14.0",
     "eslint-plugin-jest": ">=21.24.1",
     "eslint-plugin-node": ">=7.0.1",
-    "eslint-plugin-prettier": "2.6.2",
+    "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.7.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "nodemon": "^1.18.9",
-    "prettier": "1.14.3",
+    "prettier": "1.17.0",
     "tslint-config-standard": "^8.0.1",
     "vue-jest": "^3.0.2"
   }
