--- a/config/config.ini
+++ b/config/config.ini
@@ -13,7 +13,6 @@ JwtSecret = 233
 
 RuntimeRootPath =
 #文件
-ImagePrefixUrl = https://localhost:8000
 UploadImgDir = ../static/upload/images/
 ImagePath = ../static/upload/images/
 ImgHost =
@@ -26,7 +25,7 @@ LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
 
-SiteName =  hoper.xyz
+SiteName =  hoper
 Host =  hoper.xyz
 
 #邮件
@@ -34,7 +33,6 @@ MailHost = smtp.qq.com
 MailPort = 465
 MailUser =  lby.i@qq.com
 MailPassword = zjokwzwojyfvbgef
-MailFrom =  hoper.xyz
 
 LuosimaoVerifyURL =
 LuosimaoAPIKey =
