--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -32,24 +32,31 @@ http {
 
     #gzip  on;
 
-    lua_package_path "E:/code/home/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块
-	lua_package_cpath "E:/code/home/ghoper/zther/lhoper/clib/?.so;;"; #c模块
-	init_by_lua_file E:/code/home/ghoper/zther/lhoper/init/init.lua;
+    lua_package_path "F:/demo/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块
+	lua_package_cpath "F:/demo/ghoper/zther/lhoper/clib/?.so;;"; #c模块
+	init_by_lua_file F:/demo/ghoper/zther/lhoper/init/init.lua;
 
     fastcgi_intercept_errors on;
 
     server {
         listen       80;
-        server_name  hoper.xyz;
+        server_name  localhost;
         rewrite ^(.*) https://$host$request_uri permanent;
         # charset koi8-r;
 
         # access_log  logs/host.access.log  main;
 
-        # location / {
-        #    proxy_pass  https://127.0.0.1:3000;
-        # }
-
+#         location /api {
+#             proxy_pass  http://127.0.0.1:8000;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Real-PORT $remote_port;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         }
+#
+#        location / {
+#             rewrite ^(.*) https://$host$request_uri permanent;
+#        }
 
         # error_page  404              /404.html;
 
@@ -126,10 +133,10 @@ http {
     server {
         #开启http2只需要nginx开启
         listen       443 ssl http2;
-        server_name  hoper.xyz;
+        server_name  localhost;
 
-        ssl_certificate      E:/code/home/ghoper/config/tls/cert.pem;
-        ssl_certificate_key  E:/code/home/ghoper/config/tls/cert.key;
+        ssl_certificate      F:/demo/ghoper/config/tls/cert.pem;
+        ssl_certificate_key  F:/demo/ghoper/config/tls/cert.key;
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
@@ -142,11 +149,12 @@ http {
         location = /favicon.ico {
             log_not_found off;
             access_log off;
-            root  E:/code/home/ghoper/static/;
+            root  F:/demo/ghoper/static/;
         }
 
         location /api {
 		    proxy_pass  http://127.0.0.1:8000;
+            proxy_set_header Host $host;
 		    proxy_set_header X-Real-IP $remote_addr;
 		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -155,6 +163,7 @@ http {
         location /ws {
 	        proxy_pass http://127.0.0.1:8000;
 			proxy_http_version 1.1;
+            proxy_set_header Host $host;
 		    proxy_set_header Upgrade $http_upgrade;
 		    proxy_set_header Connection "Upgrade";
 		    proxy_set_header Host  $http_host;
@@ -166,16 +175,17 @@ http {
             #lua_code_cache off;
             set $lua_path $1;
             set $module '';
-            access_by_lua_file E:/code/home/ghoper/zther/lhoper/access/access.lua;
-            content_by_lua_file E:/code/home/ghoper/zther/lhoper/$lua_path.lua;
+            access_by_lua_file F:/demo/ghoper/zther/lhoper/access/access.lua;
+            content_by_lua_file F:/demo/ghoper/zther/lhoper/$lua_path.lua;
         }
 
         location /static/ {
-		    root  E:/code/home/ghoper/;
+		    root  F:/demo/ghoper/;
 		}
 
         location / {
             proxy_pass  http://127.0.0.1:3000;
+            proxy_set_header Host $host;
  			proxy_set_header X-Real-IP $remote_addr;
 		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
