--- a/website/vhoper/package.json
+++ b/website/vhoper/package.json
@@ -30,7 +30,7 @@
     "koa": "^2.6.2",
     "nuxt": "^2.6.1",
     "push.js": "^1.0.9",
-    "scrollreveal": "^4.0.5",
+    "scrollmagic": "^2.0.6",
     "spark-md5": "^3.0.0",
     "tinymce": "^5.0.1",
     "vditor": "^1.2.1",
@@ -39,7 +39,6 @@
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.6.3",
-    "@nuxtjs/eslint-config": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
