--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -32,9 +32,9 @@ http {
 
     #gzip  on;
 
-    lua_package_path "/home/hoper/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块
-	lua_package_cpath "/home/hoper/ghoper/zther/lhoper/clib/?.so;;"; #c模块
-	init_by_lua_file /home/hoper/ghoper/zther/lhoper/init/init.lua;
+    lua_package_path "/home/jyb/ghoper/zther/lhoper/lualib/?.lua;;"; #lua 模块
+	lua_package_cpath "/home/jyb/ghoper/zther/lhoper/clib/?.so;;"; #c模块
+	init_by_lua_file /home/jyb/ghoper/zther/lhoper/init/init.lua;
 
     fastcgi_intercept_errors on;
 
@@ -135,8 +135,8 @@ http {
         listen       443 ssl http2;
         server_name  localhost;
 
-        ssl_certificate      /home/hoper/ghoper/config/tls/cert.pem;
-        ssl_certificate_key  /home/hoper/ghoper/config/tls/cert.key;
+        ssl_certificate      /home/jyb/ghoper/config/tls/cert.pem;
+        ssl_certificate_key  /home/jyb/ghoper/config/tls/cert.key;
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
@@ -149,7 +149,7 @@ http {
         location = /favicon.ico {
             log_not_found off;
             access_log off;
-            root  /home/hoper/ghoper/static/;
+            root  /home/jyb/ghoper/static/;
         }
 
         location /api {
@@ -174,12 +174,12 @@ http {
             #lua_code_cache off;
             set $lua_path $1;
             set $module '';
-            access_by_lua_file /home/hoper/ghoper/zther/lhoper/access/access.lua;
-            content_by_lua_file /home/hoper/ghoper/zther/lhoper/$lua_path.lua;
+            access_by_lua_file /home/jyb/ghoper/zther/lhoper/access/access.lua;
+            content_by_lua_file /home/jyb/ghoper/zther/lhoper/$lua_path.lua;
         }
 
         location /static/ {
-		    root  /home/hoper/ghoper/;
+		    root  /home/jyb/ghoper/;
 		}
 
         location / {
