try_files 静态资源整合

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -183,6 +183,11 @@ http {
 		}
 
         location / {
+		    root  /home/jyb/ghoper/static/;
+            try_files $uri @node;
+		}
+
+        location @node {
             proxy_pass  http://127.0.0.1:3000;
             proxy_set_header Host $host;
  			proxy_set_header X-Real-IP $remote_addr;
