引入zap，抛弃原生log

--- a/config/config.ini
+++ b/config/config.ini
@@ -13,14 +13,14 @@ JwtSecret = 233
 
 RuntimeRootPath =
 #文件
-UploadImgDir = ../static/upload/images/
-ImagePath = ../static/upload/images/
+UploadImgDir = ../../static/upload/images/
+ImagePath = ../../static/upload/images/
 ImgHost =
 # MB
 ImageMaxSize = 5
 ImageAllowExts = .jpg,.jpeg,.png,.gif
 #日志
-LogSavePath = ../logs
+LogSavePath = ../../logs
 LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
@@ -37,9 +37,9 @@ MailPassword = zjokwzwojyfvbgef
 LuosimaoVerifyURL =
 LuosimaoAPIKey =
 
-QrCodeSavePath = ../static/qrcode
+QrCodeSavePath = ../../static/qrcode
 PrefixUrl =
-FontSavePath =../static/font
+FontSavePath =../../static/font
 
 CrawlerName =
 [database]
