--- a/test/java/pom.xml
+++ b/test/java/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>objenesis</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
+            <version>4.1.36.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
