--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -160,6 +160,30 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        location /gin {
+            proxy_pass  http://127.0.0.1:8001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-PORT $remote_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+#        location /actix {
+#            proxy_pass  http://127.0.0.1:8002;
+#            proxy_set_header Host $host;
+#            proxy_set_header X-Real-IP $remote_addr;
+#            proxy_set_header X-Real-PORT $remote_port;
+#            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#        }
+
+#        location /spring {
+#            proxy_pass  http://127.0.0.1:8080;
+#            proxy_set_header Host $host;
+#            proxy_set_header X-Real-IP $remote_addr;
+#            proxy_set_header X-Real-PORT $remote_port;
+#            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#        }
+
         location /ws {
 	        proxy_pass http://127.0.0.1:8000;
 			proxy_http_version 1.1;
