部署到docker成功了，静态文件打包成功，先packr2转译成go文件

--- a/hoper/manage/Dockerfile
+++ b/hoper/manage/Dockerfile
@@ -4,9 +4,9 @@ FROM scratch
 WORKDIR /manage
 
 # 将当前目录内容复制到位于 /hoper 中的容器中
-RUN mkdir manage
+#RUN mkdir manage
 
-COPY manage /manage
+COPY manage /manage/manage
 
 #Run go get -u github.com/gobuffalo/packr/packr
 
@@ -14,4 +14,5 @@ COPY manage /manage
 EXPOSE 8001
 
 # 在容器启动时运行
+CMD ["chmod 777 manage"]
 CMD ["./manage"]
