--- a/mobile/vhoper/public/manifest.json
+++ b/mobile/vhoper/public/manifest.json
@@ -1,15 +1,10 @@
 {
-  "name": "mhoper",
-  "short_name": "mhoper",
+  "name": "vhoper",
+  "short_name": "vhoper",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ],
