--- a/mobile/vhoper/package.json
+++ b/mobile/vhoper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mhoper",
+  "name": "vhoper",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,32 +21,32 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
-    "@types/jest": "^23.1.4",
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-e2e-cypress": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-pwa": "^3.8.0",
     "@vue/cli-plugin-typescript": "^3.8.0",
-    "@vue/cli-plugin-unit-jest": "^3.8.0",
+    "@vue/cli-plugin-unit-mocha": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
+    "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "husky": "^2.4.1",
     "lint-staged": "^8.1.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "ts-jest": "^23.0.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10",
-    "yarn": "^1.16.0"
+    "vue-template-compiler": "^2.6.10"
   },
   "husky": {
     "hooks": {
