vue静态代理配置

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -218,6 +218,15 @@ http {
 		    proxy_set_header X-Real-PORT $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+
+        #神奇vue
+        location /vue {
+            #所有路径进入index
+            root   F:/code/dist;
+            try_files $uri $uri/ /index.html;
+            index index.html;
+         }
+
     }
 
 }
