nginx server_name

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -229,6 +229,16 @@ http {
 
     }
 
+    server {
+            listen 443;
+            server_name liov.xyz;
+            default_type text/html;
+			content_by_lua '
+			ngx.say("<p>serve_name</p>")
+			';
+
+   }
+
 }
 
 include tcp.conf;
