每个await都会等待知道异步操作完成继续向下执行

--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ static/datafix
 static/template/packr/resume.html
 *packr.go
 test/csharp/bin
-test/foo.txt
+test/*.txt
 deploy_versions/
 .temp/
 .rn_temp/
