去无用依赖

--- a/.gitignore
+++ b/.gitignore
@@ -102,14 +102,14 @@ static/logs
 nginx-*
 *.lock
 *.sum
-hoper/hoper
-hoper/client
-static/css/tinymce
-static/datafix
-static/template/packr/resume.html
+/hoper/hoper
+/hoper/client
+/static/css/tinymce
+/static/datafix
+/static/template/packr/resume.html
 *packr.go
-test/csharp/bin
-test/*.txt
+/test/csharp/bin
+/test/*.txt
 deploy_versions/
 .temp/
 .rn_temp/
