--- a/hoper/Dockerfile
+++ b/hoper/Dockerfile
@@ -1,13 +1,9 @@
-
 FROM scratch
 
 # 将工作目录设置为 /hoper
-WORKDIR /ghoper
+WORKDIR /app
 
-# 使端口 8000 可供此容器外的环境使用
-EXPOSE 8000
-
-ADD ghoper /ghoper
+ADD ghoper /app
 
 # 在容器启动时运行
-CMD ["./ghoper","-conf", "ghoper.toml"]
+CMD ["./ghoper","-conf", "./config/ghoper.toml"]
